Pol Gubau; MW-overflow correction

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,4 @@ h1 {
   @apply font-black;
 }
 
-h2 {
-  @apply text-green-700;
-}
+ 
